--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
 
     <footer>
-        <p>Site criado por Andre Rocha como projeto para o Curso em Video</p>
+        <p>Site criado por <a href="https://github.com/andrerochadsr" target="_blank">Andre Rocha</a> como projeto para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a></p>
     </footer>
 </body>
 </html>
